2.0.7 (unreleased)
------------------

- Change Python 3.7 to use stable version, 3.8-dev as allowed failure, in
  Travis.
  See https://github.com/Pylons/deform/pull/377

- Update Bootstrap to 3.3.7.

- Add support for HTML5 attributes (e.g. including placeholder and maxlength)
  See https://github.com/Pylons/deform/pull/345

2.0.6 (2018-08-29)
------------------

- Drop Python 3.3 support.
  See https://github.com/Pylons/deform/pull/371

- Add support to Python 3.7.

- Make date_submit and time_submit optional in DateTimeInputWidget
  See https://github.com/Pylons/deform/pull/369

- Remove pinning of iso8601 to 0.1.11
  See https://github.com/Pylons/deform/pull/364

- Remove pinning of iso8601 to 0.1.11
  See https://github.com/Pylons/deform/pull/364

- i18n cleanup https://github.com/Pylons/deform/pull/367 and https://github.com/Pylons/deform/pull/368

2.0.5 (2018-02-20)
------------------

- i18n cleanup https://github.com/Pylons/deform/pull/332 and https://github.com/Pylons/deform/pull/363

- Fix bug in ``_FieldStorage`` under Python 3.x (issues #339 and #357).

- Declare Python 3.6 compatibility and enable tests against Python 3.6 (all tests pass with no changes).

- Closes #333: MANIFEST.in including docs, licenses and text files.

- Add ``link`` button type See https://github.com/Pylons/deform/issues/166

- Add traditional chinese localization

2.0.4 (2017-02-11)
------------------

- Added ability to pass a translator function to `deform.renderer.configure_zpt_renderer`


2.0.3 (2016-11-19)
------------------

- Added accordions to MappingWidget: http://deformdemo.repoze.org/mapping_accordion/

- Added CSS class ``deform-form-buttons`` to style form button group: https://github.com/Pylons/deform/pull/308

- Add more options to ``TextAreaCSVWidget``: https://github.com/Pylons/deform/pull/309

- Always render an item with a default CSS class: https://github.com/Pylons/deform/pull/306
