@@ -134,4 +134,5 @@ Contributors
 - Hans-Peter Jansen, 2018/02/18
 - Erico Andrei, 2018/02/18
 - Arnaud Morvan, 2018/04/10
+- Maksym Shalenyi, 2018/06/03
 - Krystian Rosiński, 2018/10/14
